@@ -1,3 +1,11 @@
+2011-09-09  Paolo Carlini  <paolo.carlini@oracle.com>
+
+	PR libstdc++/50336
+	* include/bits/streambuf_iterator.h (class istreambuf_iterator):
+	Implement LWG 445 in C++0x mode.
+	* testsuite/24_iterators/istreambuf_iterator/requirements/dr445.cc:
+	New.
+
 2011-09-08  Dodji Seketeli  <dodji@redhat.com>
 
 	PR c++/33255 - Support -Wunused-local-typedefs warning
